# aoc-2022-in-rust

./: .gitignore  Cargo.toml  index.html
.github/workflows/: ci.yml
