[package]
name = "advent_of_code"
version = "0.8.0"
authors = ["Felix Spöttel <1682504+fspoettel@users.noreply.github.com>"]
edition = "2021"
default-run = "advent_of_code"
publish = false
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pico-args = "0.5.0"
itertools = "0.10.5"
parse-display = "0.6.0"
nom = "7.1.1"
rustc-hash = "1.1.0"
pathfinding = "4.0.0"
egui = "0.20.1"
eframe = "0.20.1"
console_error_panic_hook = "0.1.7"
tracing-wasm = "0.2.1"
wasm-bindgen-futures = "0.4.33"

[dev-dependencies]
pretty_assertions = "1.3.0"
